# PyUPPAAL

./: .gitignore  .readthedocs.yaml  LICENSE  README.html  README.md  SETTA2022.pptx  environment.yml  lumache.py  pyproject.toml  readme_figs.key  readthedocs.yaml  setup.py
doc/: conf.py  index.rst
docs/: Makefile  make.bat  (+3 more)
src/pyuppaal/utap/src/: CMakeLists for linux.txt  CMakeLists for windows.txt  CMakeLists.txt  cmdline.h  resource.h  tracer_custom.cpp
src/pyuppaal/utap/src/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
src/pyuppaal/utap/src/build_macos/: CMakeCache.txt  Makefile  cmake_install.cmake
src/pyuppaal/utap/src/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Tracer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tracer.vcxproj  tracer.vcxproj.filters
src/pyuppaal/utap/src/build_win/tracer.dir/Release/: tracer.exe.recipe
src/pyuppaal/utap/src/build_win/tracer.dir/Release/tracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/pyuppaal/utap/src/build_win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
src/pyuppaal/utap/src/build_win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
src/pyuppaal/utap/src/build_win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
src/pyuppaal/utap/src/build_win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+363 files in other folders)
